Entrypoint changes